# agio-dev-mode

./: README.md  pyproject.toml
agio_dev_mode/: __agio__.yml
agio_dev_mode/plugins/: simple_publisher_service.py
